[package]
name = "Z"
version = "0.1.0"
edition = "2024"




[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
dialoguer = "0.11"
warp = "0.3.7"
sha3 = "0.10.8"
hex = "0.4.3"
futures-util = "0.3"  
tokio-tungstenite = "0.23"
anyhow = "1.0.98"
tokio-rustls = "0.26"
rustls = "0.23"
rcgen = "0.14"  
h3 = "0.0.8"
h3-quinn = "0.0.10"
quinn = "0.11.8"
bytes = "1.10.1"
http = "1.3.1"
rustls-pemfile = "2 "
chrono = "0.4.41"
acme-lib = "0.9.1"
hyper = "1.6.0"
axum = "0.8.4"
molt = "0.3.1"
webrtc = "0.13.0"
